# core-api-service

./: .dockerignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
kafka/: entrypoint.sh  init-users.sh
migrations/: env.py
migrations/versions/: 1690cfde70ef_add_content_hash.py  1d7f348275ed_update_enums_for_emotions.py  306057086411_update_enums.py  365595ae6af5_init.py  4275002e6c56_update_enums_logic.py  cf45357d95a4_init.py
src/: config.py  database.py  exceptions.py  main.py  utils.py
src/api/: __init__.py
src/api/batch_data/: exceptions.py  router.py  schemas.py  service.py
src/api/dashboard/: responses.py  router.py  schemas.py  service.py
src/api/files/: exceptions.py  router.py  service.py  utils.py
src/api/filters/: router.py  service.py
src/api/message/: responses.py  router.py  schemas.py  service.py
src/app/: config.py  exceptions.py  main.py
src/app/utils/: __init__.py  lifespan.py
src/database/: __init__.py  database.py
src/database/models/: message.py
src/database/repositories/: message.py
src/es_indexes/: messages.py
src/schemas/: __init__.py  granularity_enum.py  message.py  order_enum.py  sentiment_enum.py
src/services/: __init__.py
src/services/file_upload/: service.py
src/services/kafka/: config.py  kafka_service.py  service.py
